--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,41 @@
 stages:
   - build
+  - package
   - deploy
 
 variables:
-  PROJECT_NAME: drupalwxt/site-fgp
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: tcp://localhost:2375
+  PROJECT_NAME: wcms/site-stc-wcms
+
+# cache:
+#   untracked: true
 
 image: sylus/gitlab-ci
 
 services:
-  - sylus/gitlab-ci:dind
+  - docker:stable-dind
 
 before_script:
+  # Docker configuration
   - docker info
 
 build_job:
   stage: build
   script:
-   - echo "Building $PROJECT_NAME test runner"
-   - composer global require "hirak/prestissimo:^0.3"
-   - composer install --prefer-dist --no-interaction
-   - export COMPOSE_HTTP_TIMEOUT=200
-   - docker-compose --version
-   # Build out the Drupal infrastructure.
-   # make build can be avoided if leveraging Docker Hub.
-   # - make build
-   - docker-compose -f docker-compose-ci.yml up -d
-   - docker ps -a
-   - sleep 10
-   - make drupal_install
-   - make test
+    - echo "Building $PROJECT_NAME test runner"
+    - composer global require "hirak/prestissimo:^0.3"
+    - composer install --prefer-dist --no-interaction
+    - export COMPOSE_HTTP_TIMEOUT=200
+    - docker-compose --version
+    # Build out the Drupal infrastructure.
+    # make build can be avoided if leveraging Docker Hub.
+    # - make build
+    - docker-compose -f docker-compose-ci.yml up -d
+    - docker ps -a
+    - sleep 10
+    - make drupal_install
+    - make test
 
 # deploy_release:
 #   stage: deploy
